# legion

./: .gitignore  README.md  goal.md  pyproject.toml
corpus/: beekeeping.txt  cranes.txt  lighthouse.txt  printing.txt  railway.txt  reef.txt
corpus/long/: aqueduct_survey.txt  bridge_accounts.txt  granary_minutes.txt  harbor_chronicle.txt  mill_registry.txt  observatory_log.txt
corpus/tasks/: deep_archive.json  long_deep_archive.json  night_safety.json  overcoming_constraints.json  spreading_information.json  xl_town_archive.json
corpus/xl/: aqueduct_survey.txt  bridge_accounts.txt  granary_minutes.txt  harbor_chronicle.txt  mill_registry.txt  observatory_log.txt  walls_ledger.txt  wells_survey.txt
docs/: DECISIONS.md  REGIME_FINDINGS.md
legion/: __init__.py  admission.py  admission_constants.py  challenges.py  claims.py  cli.py  cluster.py  coordinator.py  crypto.py  evaluate.py  llm_client.py  settlement.py  store.py  tasks.py  tasks_realdoc.py
legion/workers/: __init__.py  base.py  llm.py  scripted.py
tests/: golden_demo_seed42.txt  test_adversaries.py  test_challenges_and_demo.py  test_cli_entrypoint.py  test_equivalence.py  test_honest_baselines.py  test_lightclient.py  test_llm_client.py  test_multiprocess.py  test_openrouter_live.py  test_realdoc_eval.py  test_regime_metrics.py  test_settlement.py  test_sim_goldens.py  test_store_and_admission.py  test_verifier_injection.py
tests/fixtures/: miss_trap.json
tests/scenarios/: answer_zero_cites.json  diamond_with_fail.json  (+6 more)
tools/: equivalence.py  lightclient.py  make_long_fixture.py
(+3 files in other folders)
