[project]
name = "legion"
version = "0.1.0"
description = "Verified Shared-Context Protocol proof of concept"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "pynacl>=1.5",
]

[project.scripts]
legion = "legion.cli:main"

[dependency-groups]
dev = [
  "hypothesis>=6.100",
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: long-running multi-process tests"]
